[gd_scene load_steps=5 format=3 uid="uid://dbtka81hpf4ox"]

[ext_resource type="FontFile" uid="uid://cqmvq6e5nt6g8" path="res://Fonts/CutiveMono-Regular.ttf" id="1_8m0y6"]
[ext_resource type="Texture2D" uid="uid://bslu77yr16iv8" path="res://Sprites/Bullets/NewBullets/NewBullet1.png" id="2_am1f4"]
[ext_resource type="Script" path="res://Scenes/menu_button.gd" id="3_qgf0j"]

[sub_resource type="Theme" id="Theme_nl420"]
default_font = ExtResource("1_8m0y6")

[node name="MenuButton" type="Button"]
theme = SubResource("Theme_nl420")
icon = ExtResource("2_am1f4")
flat = true
alignment = 0
script = ExtResource("3_qgf0j")

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
